@@ -5,6 +5,8 @@
 	* src/global.c (length_of_list), src/winio.c(get_mouseinput): Don't
 	check whether a function has a help line, since all of them have.
 	(And even if some didn't, they would still be valid functions.)
+	* src/cut.c (cut_line): There is no need to set 'openfile->mark_begin'
+	just like that; it will be set when 'openfile->mark_set' becomes TRUE.
 
 2015-11-02  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.h: Delete an unused type definition.
